--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
-  "presets": [["env", { "targets": { "node": 8 } }]],
+  "presets": [["@babel/preset-env", { "targets": { "node": 10 } }]],
   "plugins": [
-    "transform-decorators-legacy",
-    "transform-class-properties",
-    "transform-object-rest-spread"
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    "@babel/plugin-syntax-object-rest-spread",
+    "@babel/plugin-proposal-optional-chaining"
   ]
 }
