--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "darwin",
     "linux"
   ],
-  "description": "BitBucket CLI Tool",
+  "description": "Bitbucket CLI",
   "scripts": {
     "build": "babel src -d dist -s --ignore *.test.js",
     "debug:bit": "babel-node --inspect-brk src/bit.js",
@@ -48,12 +48,17 @@
     "tmp": "0.0.33"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.5",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "jest": "^21.1.0"
+    "jest-cli": "^23.6.0"
   }
 }
