--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "babel src -d dist -s --ignore *.test.js",
     "debug:bucket": "babel-node --inspect-brk src/bucket.js",
     "test": "jest",
-    "test:debug": "babel-node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
+    "test:debug": "babel-node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
+    "deploy": "npm publish"
   },
   "bin": {
     "bit": "dist/bitbucket.js"
