--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@johnls/git-extra",
-  "version": "1.2.2",
+  "version": "2.0.0",
   "engines": {
     "node": ">=10.0"
   },
@@ -10,7 +10,7 @@
   ],
   "description": "Extra git commands for working with BitBucket and GitHub",
   "scripts": {
-    "build": "rm -rf dist && babel src -d dist -s --ignore *.test.js",
+    "build": "rm -rf dist && babel src -d dist -s --ignore **/*.test.js",
     "debug:git-extra": "babel-node --inspect-brk src/git-extra.js",
     "test": "jest --coverage",
     "test:debug": "babel-node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
@@ -44,7 +44,8 @@
     "chalk": "^2.4.2",
     "command-exists": "^1.2.8",
     "minimist": "^1.2.0",
-    "opn": "^5.4.0"
+    "opn": "^5.4.0",
+    "tmp-promise": "^1.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
