--- a/package.json
+++ b/package.json
@@ -44,18 +44,18 @@
     "chalk": "^2.4.2",
     "command-exists": "^1.2.8",
     "minimist": "^1.2.0",
-    "opn": "^5.4.0",
-    "tmp-promise": "^1.0.5"
+    "open": "^6.3.0",
+    "tmp-promise": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.3",
-    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "jest-cli": "^24.1.0"
+    "@babel/preset-env": "^7.4.5",
+    "jest-cli": "^24.8.0"
   }
 }
