--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "darwin",
     "linux"
   ],
-  "description": "Extra git commands for working with BitBucket and GitHub",
+  "description": "Extra git commands for working with GitHub, BitBucket and GitLab",
   "scripts": {
-    "build": "rm -rf dist && babel src -d dist -s --ignore **/*.test.js",
+    "clean": "rm -rf dist",
+    "build": "babel src -d dist --source-maps --ignore **/*.test.js",
     "debug:git-extra": "babel-node --inspect-brk src/git-extra.js",
     "test": "jest --coverage",
     "test:debug": "babel-node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
