--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,22 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# scratch
+/scratch
+
 # dependencies
 /node_modules
 
 # testing
 /coverage
 
-# scratch
-/scratch
-
 # misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
