--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,40 +1,12 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "cwd": "${workspaceFolder}",
-      "type": "node",
+      "name": "Debug Jest Tests",
+      "type": "pwa-node",
       "request": "launch",
-      "name": "Run git-extra quick-start",
-      "skipFiles": ["<node_internals>/**"],
-      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/babel-node",
-      "program": "${workspaceFolder}/src/git-extra.js",
-      "args": [
-        "quick-start",
-        "git@github.com:jlyonsmith/node-cli-tool-template.git",
-        "scratch/new-cli-tool"
-      ],
-      "runtimeArgs": ["--nolazy"],
-      "env": {
-        "BABEL_ENV": "debug"
-      }
-    },
-    {
-      "cwd": "${workspaceFolder}",
-      "type": "node",
-      "request": "launch",
-      "name": "Run git-extra browse",
-      "skipFiles": ["<node_internals>/**"],
-      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/babel-node",
-      "program": "${workspaceFolder}/src/git-extra.js",
-      "args": ["browse"],
-      "runtimeArgs": ["--nolazy"],
-      "env": {
-        "BABEL_ENV": "debug"
-      }
+      "runtimeArgs": ["--inspect-brk", "${workspaceRoot}/node_modules/.bin/jest", "--runInBand"],
+      "console": "integratedTerminal",
     }
   ]
 }
