--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "description": "Extra git commands for working with GitHub, BitBucket and GitLab",
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "babel src -d dist --source-maps --ignore **/*.test.js",
-    "debug:git-extra": "babel-node --inspect-brk src/git-extra.js",
+    "start": "ts-node src/git-extra.ts",
+    "build": "rm -rf dist/* && tsc",
+    "debug": "ts-node --inspect-brk src/stampver.ts",
     "test": "jest --coverage",
-    "test:debug": "babel-node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
-    "deploy": "npm publish --access public"
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "deploy": "npm publish --access public",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "show-coverage": "open coverage/lcov-report/index.html"
   },
   "bin": {
     "git-extra": "dist/git-extra.js"
@@ -41,7 +45,6 @@
   },
   "homepage": "https://github.com/jlyonsmith/git-extra#readme",
   "dependencies": {
-    "autobind-decorator": "^2.4.0",
     "chalk": "^4.0.0",
     "change-case": "^4.1.1",
     "command-exists": "^1.2.9",
@@ -53,14 +56,16 @@
     "prompts": "^2.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/node": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "jest-cli": "^26.0.1"
+    "@types/jest": "^26.0.20",
+    "@types/minimatch": "^3.0.3",
+    "@types/minimist": "^1.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "jest-cli": "^26.6.3",
+    "ts-jest": "^26.5.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
