--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
   },
   "homepage": "https://github.com/jlyonsmith/git-extra#readme",
   "dependencies": {
+    "@johnls/json5": "^2.3.0",
     "chalk": "^4.0.0",
     "change-case": "^4.1.1",
     "command-exists": "^1.2.9",
     "fs-extra": "^9.0.0",
+    "got": "^11.8.1",
     "hosted-git-info": "^3.0.4",
     "minimist": "^1.2.5",
     "open": "^7.0.3",
@@ -56,6 +58,7 @@
     "prompts": "^2.3.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.7",
     "@types/jest": "^26.0.20",
     "@types/minimatch": "^3.0.3",
     "@types/minimist": "^1.2.1",
